style: fixed spacing issue in landing and made oli size consistent

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
 
+html,body
+/* {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+	overflow-x: hidden; 
+} */
+
 :root {
 	--first: #EB5531;
 	/* --first: #f9b16e; */
